# saar_sp_pretraining

./: .gitignore  README.md  pyproject.toml
scripts/: memmap_maker.py  memmap_maker.sh  tokenize_dataset_as_memmap.py  train.py  train.sh  train_gpu.sh
src/bert/: __init__.py  dataset.py  functional.py  layers.py  model.py  trainer.py
src/bert/cli/: train.py
src/dataset/: tokenized_memmap.py
tests/: attention_test.py  attention_test.py~  bert_test.py  dataset_test.py  layers_test.py  notebook.ipynb  positional_enc_test.py  split_heads_test.py  tokenized_memmap_test.py  trainer_test.py
