[project]
name = "bert"
version = "0.1.0"
description = "BERT pretraining in PyTorch"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "aj.anthonydsouza@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets==4.4.1",
    "ipykernel>=7.1.0",
    "ruff>=0.14.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

