[project]
name = "bert"
version = "0.1.0"
description = "BERT pretraining in PyTorch"
readme = "README.md"
authors = [
    { name = "ajdsouza", email = "aj.anthonydsouza@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets==4.4.1",
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "tqdm>=4.66.5",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]

[project.scripts]
bert = "scripts.train:main"

[project.optional-dependencies]
cpu = [
    "torch>=2.9.0"
]
gpu128 = [
    "torch>=2.9.0"
]
gpu126 = [
    "torch>=2.9.0"
]

[tool.uv]
conflicts = [
    [
        {extra = "cpu"},
        {extra = "gpu128"},
        {extra = "gpu126"},
    ]
]
[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
bert = { path = "src" }
torch = [
    {index = "pytorch-cpu", extra = "cpu"},
    {index = "pytorch-gpu126", extra = "gpu126"},
    {index = "pytorch-gpu128", extra = "gpu128"},

]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true



